// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Timeline pending work 1`] = `
"<ul class=\\"ix-timeline ix-timeline-end\\">
  <li class=\\"ix-timeline-item\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\">
      <!---->
    </div>
    <div class=\\"ix-timeline-item-content\\">
      <div class=\\"ix-timeline-item-label\\">
        <!---->
      </div>
      <div class=\\"ix-timeline-item-desc\\">0</div>
    </div>
  </li>
  <li class=\\"ix-timeline-item\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\">
      <!---->
    </div>
    <div class=\\"ix-timeline-item-content\\">
      <div class=\\"ix-timeline-item-label\\">
        <!---->
      </div>
      <div class=\\"ix-timeline-item-desc\\">1</div>
    </div>
  </li>
  <li class=\\"ix-timeline-item\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\">
      <!---->
    </div>
    <div class=\\"ix-timeline-item-content\\">
      <div class=\\"ix-timeline-item-label\\">
        <!---->
      </div>
      <div class=\\"ix-timeline-item-desc\\">2</div>
    </div>
  </li>
  <li class=\\"ix-timeline-item\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\">
      <!---->
    </div>
    <div class=\\"ix-timeline-item-content\\">
      <div class=\\"ix-timeline-item-label\\">
        <!---->
      </div>
      <div class=\\"ix-timeline-item-desc\\">3</div>
    </div>
  </li>
</ul>"
`;

exports[`Timeline pendingDot work 1`] = `
"<ul class=\\"ix-timeline ix-timeline-end\\">
  <li class=\\"ix-timeline-item\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\">
      <!---->
    </div>
    <div class=\\"ix-timeline-item-content\\">
      <div class=\\"ix-timeline-item-label\\">
        <!---->
      </div>
      <div class=\\"ix-timeline-item-desc\\">0</div>
    </div>
  </li>
  <li class=\\"ix-timeline-item\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\">
      <!---->
    </div>
    <div class=\\"ix-timeline-item-content\\">
      <div class=\\"ix-timeline-item-label\\">
        <!---->
      </div>
      <div class=\\"ix-timeline-item-desc\\">1</div>
    </div>
  </li>
  <li class=\\"ix-timeline-item\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\">
      <!---->
    </div>
    <div class=\\"ix-timeline-item-content\\">
      <div class=\\"ix-timeline-item-label\\">
        <!---->
      </div>
      <div class=\\"ix-timeline-item-desc\\">2</div>
    </div>
  </li>
  <li class=\\"ix-timeline-item\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\">
      <!---->
    </div>
    <div class=\\"ix-timeline-item-content\\">
      <div class=\\"ix-timeline-item-label\\">
        <!---->
      </div>
      <div class=\\"ix-timeline-item-desc\\">3</div>
    </div>
  </li>
  <li class=\\"ix-timeline-item ix-timeline-item-pending-dot ix-timeline-item-end\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-custom ix-timeline-item-dot-primary\\"><i class=\\"ix-icon ix-icon-loading\\" role=\\"img\\" aria-label=\\"loading\\"></i></div>
    <div class=\\"ix-timeline-item-content\\">
      <div class=\\"ix-timeline-item-label\\">
        <!---->
      </div>
      <div class=\\"ix-timeline-item-desc\\">
        <!---->
      </div>
    </div>
  </li>
</ul>"
`;

exports[`Timeline pendingDot work 2`] = `
"<ul class=\\"ix-timeline ix-timeline-end\\">
  <li class=\\"ix-timeline-item\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\">
      <!---->
    </div>
    <div class=\\"ix-timeline-item-content\\">
      <div class=\\"ix-timeline-item-label\\">
        <!---->
      </div>
      <div class=\\"ix-timeline-item-desc\\">0</div>
    </div>
  </li>
  <li class=\\"ix-timeline-item\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\">
      <!---->
    </div>
    <div class=\\"ix-timeline-item-content\\">
      <div class=\\"ix-timeline-item-label\\">
        <!---->
      </div>
      <div class=\\"ix-timeline-item-desc\\">1</div>
    </div>
  </li>
  <li class=\\"ix-timeline-item\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\">
      <!---->
    </div>
    <div class=\\"ix-timeline-item-content\\">
      <div class=\\"ix-timeline-item-label\\">
        <!---->
      </div>
      <div class=\\"ix-timeline-item-desc\\">2</div>
    </div>
  </li>
  <li class=\\"ix-timeline-item\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\">
      <!---->
    </div>
    <div class=\\"ix-timeline-item-content\\">
      <div class=\\"ix-timeline-item-label\\">
        <!---->
      </div>
      <div class=\\"ix-timeline-item-desc\\">3</div>
    </div>
  </li>
  <li class=\\"ix-timeline-item ix-timeline-item-pending-dot ix-timeline-item-end\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-custom ix-timeline-item-dot-primary\\">pendingDotText</div>
    <div class=\\"ix-timeline-item-content\\">
      <div class=\\"ix-timeline-item-label\\">
        <!---->
      </div>
      <div class=\\"ix-timeline-item-desc\\">
        <!---->
      </div>
    </div>
  </li>
</ul>"
`;

exports[`Timeline placement work 1`] = `
"<ul class=\\"ix-timeline ix-timeline-end\\">
  <li class=\\"ix-timeline-item\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\">
      <!---->
    </div>
    <div class=\\"ix-timeline-item-content\\">
      <div class=\\"ix-timeline-item-label\\">
        <!---->
      </div>
      <div class=\\"ix-timeline-item-desc\\">0</div>
    </div>
  </li>
  <li class=\\"ix-timeline-item\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\">
      <!---->
    </div>
    <div class=\\"ix-timeline-item-content\\">
      <div class=\\"ix-timeline-item-label\\">
        <!---->
      </div>
      <div class=\\"ix-timeline-item-desc\\">1</div>
    </div>
  </li>
  <li class=\\"ix-timeline-item\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\">
      <!---->
    </div>
    <div class=\\"ix-timeline-item-content\\">
      <div class=\\"ix-timeline-item-label\\">
        <!---->
      </div>
      <div class=\\"ix-timeline-item-desc\\">2</div>
    </div>
  </li>
  <li class=\\"ix-timeline-item\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\">
      <!---->
    </div>
    <div class=\\"ix-timeline-item-content\\">
      <div class=\\"ix-timeline-item-label\\">
        <!---->
      </div>
      <div class=\\"ix-timeline-item-desc\\">3</div>
    </div>
  </li>
</ul>"
`;

exports[`Timeline render work 1`] = `"<ul class=\\"ix-timeline ix-timeline-end\\"></ul>"`;

exports[`Timeline reverse work 1`] = `
"<ul class=\\"ix-timeline ix-timeline-end\\">
  <li class=\\"ix-timeline-item\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\">
      <!---->
    </div>
    <div class=\\"ix-timeline-item-content\\">
      <div class=\\"ix-timeline-item-label\\">
        <!---->
      </div>
      <div class=\\"ix-timeline-item-desc\\">0</div>
    </div>
  </li>
  <li class=\\"ix-timeline-item\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\">
      <!---->
    </div>
    <div class=\\"ix-timeline-item-content\\">
      <div class=\\"ix-timeline-item-label\\">
        <!---->
      </div>
      <div class=\\"ix-timeline-item-desc\\">1</div>
    </div>
  </li>
  <li class=\\"ix-timeline-item\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\">
      <!---->
    </div>
    <div class=\\"ix-timeline-item-content\\">
      <div class=\\"ix-timeline-item-label\\">
        <!---->
      </div>
      <div class=\\"ix-timeline-item-desc\\">2</div>
    </div>
  </li>
  <li class=\\"ix-timeline-item\\">
    <div class=\\"ix-timeline-item-line\\"></div>
    <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\">
      <!---->
    </div>
    <div class=\\"ix-timeline-item-content\\">
      <div class=\\"ix-timeline-item-label\\">
        <!---->
      </div>
      <div class=\\"ix-timeline-item-desc\\">3</div>
    </div>
  </li>
</ul>"
`;

exports[`Timeline reverse work 2`] = `"<ul class=\\"ix-timeline ix-timeline-end ix-timeline-reverse\\"></ul>"`;
